--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,7 @@ a {
     padding: 3rem;
     font-family: 'Fredoka One', cursive;
     background-color: rgba(0,0,0,0.65);
+    justify-content: center;
 }
 
 .title {
@@ -71,6 +72,12 @@ a {
     bottom: 5%;
     width: 100%;
     text-align: center;
+    color: #E4E4E4;
+}
+
+.white-link {
+    text-decoration: underline !important;
+    color: #E4E4E4 !important;
 }
 
 .section.right {
